<resources>
    <string name="app_name">p(l)aykid</string>
    <string name="enter_phone">enter phone number</string>
    <string name="enter_code">enter your code</string>
    <string name="app_enter">Enter</string>
    <string name="create_new_user">Create new user</string>
    <string name="Account_Balance">Account_Balance</string>
    <string name="my_saving">my savings</string>
    <string name="Payment_in_store">Payment in store</string>
    <string name="send">send</string>
    <string name="Requesting_money_from_the_parent">Requesting money from the parent</string>
    <string name="saving_Balance">saving Balance</string>
    <string name="create_new_saving">create new saving</string>
    <string name="saving_name">Saving Name</string>
    <string name="A_new_topic_for_saving">A new topic for saving</string>
    <string name="confirmation">confirmation</string>
    <string name="Amount_of_money_to_withdrawal">Amount of money to withdrawal</string>
    <string name="enter_the_amount_of_money">enter the amount of money</string>
    <string name="send_the_request">send the request</string>
    <string name="please_scan_the_barcode">please scan the barcode</string>
    <string name="Motivational_note">Motivational note</string>
    <string name="Saving_Goal">Saving Goal</string>
    <string name="Savings_deposit">Savings deposit</string>
    <string name="Withdrawal_from_savings">Withdrawal from savings</string>
    <string name="delete_saving">delete savings</string>
    <string name="title_activity_app_drawer">AppDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_button">My Button</string>


</resources>