<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@drawable/background"
    tools:context=".ui.home.HomeFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:padding="10dp"
        ></ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.5"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="100$"
            android:textColor="@android:color/black"
            android:textSize="30dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnSavingDeposit"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:text="@string/my_saving"></Button>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_marginTop="50dp"
        >

        <Button
            android:id="@+id/btnPaymentInStore"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/Requesting_money_from_the_parent" />

        <Button
            android:id="@+id/btnRequestMoney"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/Payment_in_store"

            />

    </LinearLayout>





    <Button
        android:text="Open Scanner"
        android:id="@+id/qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

</LinearLayout>

